[gd_scene load_steps=13 format=3 uid="uid://ckil7mvcywi75"]

[ext_resource type="Script" path="res://main.gd" id="1"]
[ext_resource type="SM64Handler" uid="uid://dssuryb827kaq" path="res://sm_64_handler.tres" id="2_r8jk2"]
[ext_resource type="Script" path="res://addons/libsm64/mario/mario.gd" id="3"]
[ext_resource type="Script" path="res://addons/libsm64/handlers/static_surfaces_handler.gd" id="4"]
[ext_resource type="Script" path="res://addons/libsm64/handlers/surface_objects_handler.gd" id="5_mxbmy"]

[sub_resource type="BoxMesh" id="8"]
size = Vector3(5, 10, 5)

[sub_resource type="PlaneMesh" id="7"]
size = Vector2(40, 30)

[sub_resource type="PrismMesh" id="9"]
left_to_right = 1.0
size = Vector3(10, 10, 10)

[sub_resource type="BoxMesh" id="10"]
size = Vector3(5, 2, 5)

[sub_resource type="Animation" id="11"]
resource_name = "Move"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-12, 5, 7), Vector3(0, 5, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="Animation" id="12"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-12, 5, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ehrq2"]
_data = {
"Move": SubResource("11"),
"RESET": SubResource("12")
}

[node name="Main" type="Node3D"]
script = ExtResource("1")
sm64_handler = ExtResource("2_r8jk2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 20, 20)
current = true

[node name="Mario" type="Node3D" parent="." node_paths=PackedStringArray("camera") groups=["Mario"]]
script = ExtResource("3")
sm64_handler = ExtResource("2_r8jk2")
camera = NodePath("../Camera3D")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open ROM"
size = Vector2i(335, 162)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.n64", "*.z64")

[node name="StaticSurfaces" type="Node3D" parent="."]

[node name="Wall" type="MeshInstance3D" parent="StaticSurfaces" groups=["libsm64_static_surfaces"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 5, 0)
mesh = SubResource("8")
skeleton = NodePath("../..")

[node name="Platform" type="MeshInstance3D" parent="StaticSurfaces" groups=["libsm64_static_surfaces"]]
mesh = SubResource("7")
skeleton = NodePath("../..")

[node name="Ramp" type="MeshInstance3D" parent="StaticSurfaces" groups=["libsm64_static_surfaces"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 5, -10)
mesh = SubResource("9")

[node name="Objects" type="Node3D" parent="."]

[node name="MovingPlatform" type="MeshInstance3D" parent="Objects" groups=["libsm64_surface_objects"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 5, 7)
mesh = SubResource("10")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Objects/MovingPlatform"]
playback_process_mode = 0
libraries = {
"": SubResource("AnimationLibrary_ehrq2")
}

[node name="StaticSurfacesHandler" type="Node" parent="."]
script = ExtResource("4")
sm64_handler = ExtResource("2_r8jk2")

[node name="SurfaceObjectsHandler" type="Node" parent="."]
script = ExtResource("5_mxbmy")
sm64_handler = ExtResource("2_r8jk2")

[node name="OmniLight3d" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)
light_energy = 20.0
omni_range = 50.0
